--- a/st_input_slider/frontend/package.json
+++ b/st_input_slider/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "d3-format": "^3.1.0",
     "npm-check-updates": "^16.14.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +37,7 @@
   },
   "homepage": ".",
   "devDependencies": {
+    "@types/d3-format": "^3.0.4",
     "@types/node": "^20.12.5",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
